# teeworlds

./: .gitignore  CMakeLists.txt  bam.lua  duck1.map  genie.lua  genie_config.lua  genie_prebuild.py  readme.md
.github/workflows/: build.yaml
datasrc/: compile.py  content.py  netobj_js.py  netobj_lua.py  network.py
datasrc/editor/automap/: desert_main.json  jungle_main.json  winter_main.json
datasrc/mods/duck/: main.js
datasrc/mods/example_physics_1/: main.js
datasrc/mods/example_physics_2/: main.js
datasrc/mods/example_physics_3/: 0_common.js  main.js  utils.lua
datasrc/mods/example_ui_1/: 0_common.js  1_ui.js  main.js  main.lua  utils.lua
datasrc/mods/test/: main.js  mod_info.json  weird-01.wv
duck/: config.lua  genie.lua  genie_config.lua  genie_prebuild.py
duck_content/: ball_game.txt  duck1.map  phys2.map
duck_doc/: make_api_js.py  make_api_lua.py
duck_doc/source/: api.rst  index.rst
duck_mods/example_physics_1/: 0_common.js  main.js  main.lua  mod_info.json
duck_mods/example_physics_2/: main.lua
duck_mods/example_physics_3/: bzzz-01.wv  bzzz-02.wv  bzzz-03.wv  bzzz-04.wv  main.lua  utils.lua
duck_mods/example_render_1/: main.lua
duck_mods/example_ui_1/: main.js  main.lua
duck_mods/test/: 1_ui.js  weird-02.wv  weird-03.wv  weird-04.wv
duck_mods/xmas/: base.lua  draw.lua  main.lua  pop.wv  xmas.map
other/curl/: curl.lua
other/libzip/: libzip.lua
other/luajit/: luajit.lua
other/luajit/windows/lib32/: lua51.lib
scripts/: cmd5.py
sphinx/source/: api.rst  conf.py
src/base/: hash.h  system.c  system.h
src/engine/: client.h  server.h  sound.h  textrender.h
src/engine/client/: backend_sdl.cpp  client.cpp  client.h  graphics_threaded.cpp  http.cpp  http.h  sound.cpp  sound.h  text.cpp
src/engine/server/: server.cpp  server.h
src/engine/shared/: config_variables.h  duck_modfile.cpp  duck_modfile.h  engine.cpp  growbuffer.h  microprofile.cpp  microprofile.h  network_server.cpp  protocol.h  snapshot.cpp  snapshot.h
src/game/: collision.cpp  collision.h  duck_collision.cpp  duck_collision.h  duck_gamecore.cpp  duck_gamecore.h  gamecore.cpp  gamecore.h  my_protocol.h  tuning.h  variables.h
src/game/client/: gameclient.cpp  gameclient.h  localization.cpp  ui.cpp  ui.h
src/game/client/components/: binds.cpp  camera.cpp  chat.cpp  controls.cpp  countryflags.cpp  duck_bridge.cpp  duck_bridge.h  duck_js.cpp  duck_js.h  duck_lua.cpp  duck_lua.h  duk_entry.cpp  duk_entry.h  duktape_comp.cpp  duktape_comp.h  hud.cpp  infomessages.cpp  killmessages.cpp  menus.cpp  menus_settings.cpp  notifications.cpp  players.cpp  scoreboard.cpp  skins.cpp  skins.h  spectator.cpp  spectator.h
src/game/editor/: auto_map.cpp  auto_map.h  editor.cpp  editor.h
src/game/server/: duck_gameworld.cpp  duck_gameworld.h  entity.h  gamecontext.cpp  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gameworld.h  player.cpp  player.h
src/game/server/entities/: character.cpp  character.h  laser.cpp  laser.h  pickup.cpp  projectile.cpp
src/game/server/gamemodes/: ctf.cpp  dm.cpp  duck_mod.cpp  duck_mod.h  example_physics_1.cpp  example_physics_1.h  example_physics_2.cpp  example_physics_2.h  example_physics_3.cpp  example_physics_3.h  example_render_1.cpp  example_render_1.h  example_ui_1.cpp  example_ui_1.h  instagib_modifier.cpp  instagib_modifier.h  lms.cpp  lts.cpp  mod.cpp  mod.h  tdm.cpp  test.cpp  test.h  xmas.cpp  xmas.h  zomb.cpp  zomb.h
zomb_assets/: normal.wave  zomb_cavern.map  zomb_cavern2.map  zomb_fort.map  zomb_permafrost.map
